Fix layout shift from image loading

--- a/src/components/coming-soon/coming-soon.styles.scss
+++ b/src/components/coming-soon/coming-soon.styles.scss
@@ -24,6 +24,7 @@
   img {
     max-width: 1200px;
     width: 80%;
+    height: auto;
 
     @media screen and (orientation: landscape) {
       width: 40%;
